BdP changed the URL layout
Because of this we were unable to retrieve the exchange rates for a few
days. It's fixed now.

--- a/labs_django/exchangeapp/templates/exchange_about.html
+++ b/labs_django/exchangeapp/templates/exchange_about.html
@@ -5,7 +5,7 @@
     <h2>Acerca</h2>
 
     <p>Nesta aplicação são mostradas as taxas de câmbio publicadas diariamente pelo Banco de Portugal,
-    dos <a href="https://www.bportugal.pt/pt-PT/Estatisticas/Dominios%20Estatisticos/EstatisticasCambiais/Paginas/Taxasdereferenciadiarias.aspx" target="_blank">câmbios do Banco de Portugal</a>.
+    dos <a href="https://www.bportugal.pt/taxas-cambio" target="_blank">câmbios do Banco de Portugal</a>.
 
     <h2>Aviso</h2>
 
