--- a/labs_django/exchangeapp/templates/exchange_calc.html
+++ b/labs_django/exchangeapp/templates/exchange_calc.html
@@ -50,7 +50,7 @@
       </tr>
     </table>
   </form>
-  <p>Não deixe de consultar <a href="https://www.bportugal.pt/pt-PT/Estatisticas/Dominios%20Estatisticos/EstatisticasCambiais/Paginas/Taxasdereferenciadiarias.aspx" target="_blank">a página do BdP</a> sobre as taxas de câmbio.
+  <p>Não deixe de consultar <a href="https://www.bportugal.pt/taxas-cambio" target="_blank">a página do BdP</a> sobre as taxas de câmbio.
 
 </div>
 
