--- a/labs_django/exchangeapp/templates/exchange_notes.html
+++ b/labs_django/exchangeapp/templates/exchange_notes.html
@@ -5,7 +5,7 @@
     <h2>Notas</h2>
 
     <p>Nesta aplicação são mostradas as taxas de câmbio publicadas diariamente pelo Banco de Portugal, disponíveis
-    <a href="https://www.bportugal.pt/pt-PT/Estatisticas/Dominios%20Estatisticos/EstatisticasCambiais/Paginas/Taxasdereferenciadiarias.aspx" target="_blank">nesta página</a>.
+    <a href="https://www.bportugal.pt/taxas-cambio" target="_blank">nesta página</a>.
 
     <p>O BdP mantém um ficheiro com câmbios desde 1999-01-04 para todas as moedas cotadas diariamente que usamos para actualizar a nossa base de dados.
 
