--- a/labs_django/templates/base.html
+++ b/labs_django/templates/base.html
@@ -27,6 +27,7 @@
   <!-- End Header for Printing -->
 
   <!-- Star Header -->
+  <div id="menu_back" class="noprint"></div>
   <div id="screen_header" class="noprint">
     <h1>{% block inpage_title %}{% endblock %}</h1>
     <div id="header_menu">
