Parliament attendance web site

--- a/labs_django/timeclockapp/templates/timeclock_base.html
+++ b/labs_django/timeclockapp/templates/timeclock_base.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}Faltas na Assembleia da República{% endblock %}
+{% block title %}Faltas no Parlamento{% endblock %}
 
-{% block print_header %}Faltas na Assembleia da República{% endblock %}</p>
+{% block print_header %}Faltas no Parlamento{% endblock %}</p>
 
-{% block inpage_title %}Faltas na Assembleia da República{% endblock %}
+{% block inpage_title %}Faltas no Parlamento{% endblock %}
 
 {% block base_header %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/exchange_style.css' %}">
