--- a/labs_django/static/css/labs_style.css
+++ b/labs_django/static/css/labs_style.css
@@ -121,9 +121,9 @@ div#menu_back {
 }
 
 .text_box {
-  background: #e0ceb5;
   border-radius:0.5em;
-  padding: 0.5em;
+  padding: 0 0.5em 0 0.5em;
+  border: 1px solid #e0ceb5;
 }
 
 .center_content {
