--- a/labs_django/timeclockapp/templates/timeclock_about.html
+++ b/labs_django/timeclockapp/templates/timeclock_about.html
@@ -4,7 +4,20 @@
   <div class="main-content text_box">
     <h2>Acerca</h2>
 
-    <p>aldkja dçlkajdç lakdjaçsldkja sçdlkjad çlkajsd </p>
+    <p>A qualidade dos sites do estado é muito variável. Temos desde sites como o <a href="http://www.base.gov.pt">base.gov.pt</a> que disponibilizam os dados via uma interface moderna e intuitiva e, paralelamente, disponibilizam os dados em formatos legíveis por máquinas (JSON no caso). Até sites como o <a href="http://publicacoes.mj.pt">Portal da Justiça</a> que parecem querer impedir de forma activa o acesso dos cidadãos à informação que lhes pertence. É normal, nos sites do estado, a disponibilização dos dados em formatos difíceis de processar, como o PDF, digitalizações de baixa qualidade em PDFs sem reconhecimento óptico de caracteres, em formatos da Microsoft (XLS, DOC, etc).
 
+    <p>O <a href="https://parlamento.pt">parlamento.pt</a>, home page da Assembleia da República, parece situar-se a meio da tabela no que concerne às dificuldades que impõe ao cidadão no acesso aos dados. Devido a esta falta de qualidade têm surgido várias iniciativas para extrair e apresentar a informação do parlamento.pt de outras formas:</p>
+
+    <ul>
+      <li><a href="http://demo.cratica.org/" target="_blank">Demo.Cratica</a> (actualizado a 2015);</li>
+      <li><a href="http://opontodoparlamento.org/" target="_blank">O Ponto do Parlamento</a>;</li>
+      <li><a href="http://hemiciclo.pt/" target="_blank">Hemiciclo</a>.</li>
+    </ul>
+
+    <p>Estes sites respondem a várias necessidades, facilidade de navegação, indexação dos dados pelos motores de busca, visualização inovadora dos dados, etc. Com o intuito de contribuir para a <a href="https://pt.wikipedia.org/wiki/Dados_abertos" target="_blank">libertação dos dados públicos</a>, pertença dos cidadãos, este site tenta complementar o trabalho já feito com a disponibilização de parte dos dados do parlamento.pt em formato legível por máquinas.</p>
+
+    <p><a href="{% url 'timeclock_index' %}">Os dados aqui disponibilizados</a> são actualizados diariamente às 10:00.</p>
+
+    <p>Se tiver sugestões sobre o formato a usar, não hesite em <a href="mailto:webmaster@tretas.org">contactar-me</a></p>
   </div>
 {% endblock %}
