Correct some typos

--- a/labs_django/timeclockapp/templates/timeclock_index.html
+++ b/labs_django/timeclockapp/templates/timeclock_index.html
@@ -11,25 +11,24 @@
       <li>Número da Legislatura: numeral romano de VI a XIII;</li>
       <li>Data da reunião plenária: no formato iso AAAA-MM-DD;</li>
       <li>Número da reunião;</li>
-      <li>Identificador da reunião plenária: trata-se de um inteiro, único para cada reunião, com o qual se pode contruir o URL onde constam as presenças e faltas dos deputados. Por exemplo, a reunião de 3 de Outubro de 2017 tem o bid igual a 169766. O URL vem:<br>
+      <li>Identificador da reunião plenária: trata-se de um inteiro, único para cada reunião, com o qual se pode construir o URL onde constam as presenças e faltas dos deputados. Por exemplo, a reunião de 3 de Outubro de 2017 tem o bid igual a 169766. O URL vem:<br>
       <a href="https://www.parlamento.pt/DeputadoGP/Paginas/DetalheReuniaoPlenaria.aspx?BID=169766" target="_blank">https://www.parlamento.pt/DeputadoGP/Paginas/DetalheReuniaoPlenaria.aspx?BID=<strong>169766</strong></a>;</li>
       <li>Tipo de reunião: Ordinária, Solene, Extraordinária, Comemorativa;</li>
       <li>Nome do deputado;</li>
-      <li>Identificado do deputado: trata-se de um inteiro, único para cada deputado, com o qual se pode construír o URL correspondente à página biográfica de cada deputado. Por exemplo, o deputado Adão Silva tem o bid igual a 3, a respectiva página biográfica vem:<br>
+      <li>Identificado do deputado: trata-se de um inteiro, único para cada deputado, com o qual se pode construir o URL correspondente à página biográfica de cada deputado. Por exemplo, o deputado Adão Silva tem o bid igual a 3, a respectiva página biográfica vem:<br>
       <a href="https://www.parlamento.pt/DeputadoGP/Paginas/Biografia.aspx?BID=3" target="_blank">https://www.parlamento.pt/DeputadoGP/Paginas/Biografia.aspx?BID=<strong>3</strong></a>;</li>
       <li>Sigla do partido;</li>
       <li>Presença/Falta: Presença (P), Falta ao Quórum de Votação Falta Justificada (FJ), Falta Ausência em Missão Parlamentar (AMP), Presença em Comissão autorizada pelo PAR, Falta Injustificada (FI);</li>
       <li>Motivo: Assistência à família, Casamento, Doença, Força Maior, Luto, Maternidade, Motivo justificado, Paternidade, Trabalho Parlamentar, Trabalho Político.</li>
     </ul>
 
-    <p><strong>Atenção</strong>, o ficheiro, descomprimido, tem cerca de 36MB, com mais de 450000 linhas. Estas dimensões poderão ser um desafio se não se usar as ferramentas adequadas para tratar esta informação. Posto isto, o Calc do LibreOffice (uma folha de cálculo) não tem qualquer problema em ler o ficheiro e tratar os dados, pelo que suponho que o Excel também não terá problemas, apesar de serem ferramentas claramente inadequadas para este tipo de trabalho.</p>
+    <p><strong>Atenção</strong>, o ficheiro, descomprimido, tem cerca de 36MB, com mais de 450000 linhas. Estas dimensões poderão ser um desafio se não se usar as ferramentas adequadas para tratar esta informação. Posto isto, o <a href="https://www.libreoffice.org/" target="_blank">Calc do LibreOffice</a> (uma folha de cálculo) não tem qualquer problema em ler o ficheiro e tratar os dados, pelo que suponho que o Excel também não terá problemas, apesar de serem ferramentas claramente inadequadas para este tipo de trabalho.</p>
 
     <p>O ficheiro está comprimido usando a ferramenta <a href="http://www.bzip.org" target="_blank"><tt>bzip2</tt></a>.</p>
 
     <h2>Download</h2>
 
     <p>Pode obter o ficheiro <a href="https://www.dropbox.com/sh/l5fwcbnncezluqb/AACiP_oNj6Cv0D74lvXcb-KWa?dl=0" target="_blank">aqui</a></p>
-
 
   </div>
 {% endblock %}
